EC2-INSTANCE/1-vpc.tf
# vpc.tf

resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  tags = {
    Name = "EC2-VPC"
  }
}
